# reflector-cpp-MsgEnv--transport

./: .gitignore  .gitmodules  CMakeLists.txt  Interface_App.hpp  Interface_app.hpp  README.md  clean.cmd  clean.sh  dev.txt  g_.hpp  ifacegenconfig.json  interface-Discovery.h  interface-MessagingEnv.h  main.cpp
IPSME/: IPSME_Bridge.hpp  Responder_Discovery.hpp  Responder_MessagingEnv.hpp
transcripts/: 2026-06-18- conditional build using CMake.txt
